# ChangeLog for media-tv/zattoo-bin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Apr 2008; Felix Bechstein (flx\) <f@ub0r.de>
  -zattoo-bin-3.0.8.9191.ebuild, +zattoo-bin-3.1.0.11060.ebuild:
  version bump for zattoo-bin

  11 Dec 2007; Markus Ullmann <jokey@gentoo.org> -77zattoo-bin,
  qdevelop-0.24, zattoo-bin-3.0.8.9191:
  Don't install env reference as rpaths are hardcoded already

  12 Nov 2007; Felix Bechstein (flx\) <f@ub0r.de> ++,
  -zattoo-bin-3.0.5.8208.ebuild:
  bump

  22 Sep 2007; Christian Helbling <helch@gmx.ch>
  -zattoo-bin-2.2.10.6523.ebuild:
  drop old

  22 Sep 2007; Christian Helbling <helch@gmx.ch>
  +zattoo-bin-3.0.5.8208.ebuild:
  version bump

  15 Sep 2007; Jakub Moc <jakub@gentoo.org> zattoo-bin-2.2.10.6523.ebuild:
  Replace removed app-crypt/libgssapi with net-libs/libgssglue; if it does not
  work, your thanks go to vapier

  21 Aug 2007; Santiago M. Mola <coldwind@gentoo.org>
  zattoo-bin-2.2.10.6523.ebuild:
  Add net-dns/libidn, thanks to Matthias Kuhn.

  11 Jul 2007; Santiago M. Mola <coldwind@gentoo.org>
  zattoo-bin-2.2.10.6523.ebuild:
  Add RESTRICT fetch mirror

  08 Jul 2007; Santiago M. Mola <coldwind@gentoo.org>
  zattoo-bin-2.2.10.6523.ebuild:
  Change DESCRIPTION.

  23 Jun 2007; Christian Helbling <helch@gmx.ch>
  -zattoo-bin-2.2.9.6023.ebuild, +zattoo-bin-2.2.10.6523.ebuild:
  Version bump

  08 Jun 2007; Ali Polatel (hawking) <polatel@gmail.com>
  -zattoo-bin-2.2.8.5561.ebuild:
  Drop old

  08 June 2007; Samuel Robyr <samuel.robyr@gmail.com> zattoo-bin-2.2.9.6023:
  Version bump

  25 May 2007; Markus Ullmann <jokey@gentoo.org> zattoo-bin-2.2.8.5561:
  cosmetics

  20 May 2007; Christian Helbling <helch@gmx.ch> +files/77zattoo-bin,
  +zattoo-bin-2.2.8.5561.ebuild, +metadata.xml:
  Readding ebuild for bug #178918
